项目微服务整改，新增bingfood服务作为http服务
