# api/user/service/openapi.yaml
@@ -3,83 +3,83 @@
 
 openapi: 3.0.3
 info:
-    title: BingfoodService API
+  title: UserService API
     version: 0.0.1
 paths:
     /user/login:
-        post:
-            tags:
-                - BingfoodService
-            operationId: BingfoodService_LoginOrRegister
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/user.v1.UserLoginOrRegisterRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/user.v1.UserLoginOrRegisterReply'
+      post:
+        tags:
+          - UserService
+        operationId: UserService_LoginOrRegister
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user.service.v1.UserLoginOrRegisterRequest'
+          required: true
+        responses:
+          "200":
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/user.service.v1.UserLoginOrRegisterReply'
     /user/setPwd:
-        post:
-            tags:
-                - BingfoodService
-            operationId: BingfoodService_SetUserPassword
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/user.v1.SetUserPasswordRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/user.v1.SetUserPasswordReply'
+      post:
+        tags:
+          - UserService
+        operationId: UserService_SetUserPassword
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user.service.v1.SetUserPasswordRequest'
+          required: true
+        responses:
+          "200":
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/user.service.v1.SetUserPasswordReply'
 components:
-    schemas:
-        user.v1.SetUserPasswordReply:
-            type: object
-            properties:
-                retCode:
-                    type: integer
-                    format: uint32
-                retMsg:
-                    type: string
-        user.v1.SetUserPasswordRequest:
-            type: object
-            properties:
-                userMobile:
-                    type: string
-                password:
-                    type: string
-        user.v1.UserLoginOrRegisterReply:
-            type: object
-            properties:
-                retCode:
-                    type: integer
-                    format: uint32
-                retMsg:
-                    type: string
-                token:
-                    type: string
-        user.v1.UserLoginOrRegisterRequest:
-            type: object
-            properties:
-                userMobile:
-                    type: string
-                loginType:
-                    type: integer
-                    format: uint32
-                validCode:
-                    type: string
-                password:
-                    type: string
+  schemas:
+    user.service.v1.SetUserPasswordReply:
+      type: object
+      properties:
+        retCode:
+          type: integer
+          format: uint32
+        retMsg:
+          type: string
+    user.service.v1.SetUserPasswordRequest:
+      type: object
+      properties:
+        userMobile:
+          type: string
+        password:
+          type: string
+    user.service.v1.UserLoginOrRegisterReply:
+      type: object
+      properties:
+        retCode:
+          type: integer
+          format: uint32
+        retMsg:
+          type: string
+        token:
+          type: string
+    user.service.v1.UserLoginOrRegisterRequest:
+      type: object
+      properties:
+        userMobile:
+          type: string
+        loginType:
+          type: integer
+          format: uint32
+        validCode:
+          type: string
+        password:
+          type: string
 tags:
-    - name: BingfoodService
+  - name: UserService
